# djpt

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: .env.example  docker-compose.yml
server/: urls.py
server/app/common/: apps.py
server/app/users/: apps.py  models.py
server/app/users/migrations/: 0001_initial.py
server/settings/: .env.example  __init__.py
server/settings/environments/: development.py  test.py
